load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load(
    "//:index.bzl",
    "prerender_component",
    "prerender_pages",
    "web_resources_devserver",
)
load("//tools/jasmine:defs.bzl", "jasmine_web_test_suite")
load("//tools/typescript:defs.bzl", "ts_project")

copy_to_bin(
    name = "package",
    srcs = ["package.json"],
)

prerender_pages(
    name = "site",
    src = "site.tsx",
    tsconfig = "//:tsconfig",
    source_map = True,
    # Need `"type": "module"` to load `*.js` files output by `*.tsx` compilation.
    data = [":package"],
    bundle_js = False, # Optimization: No client-side JavaScript on this site.
    lib_deps = [
        "//:node_modules/@rules_prerender/preact",
        "//:node_modules/preact",
    ],
    deps = [":component"],
)

prerender_component(
    name = "component",
    srcs = ["component.tsx"],
    tsconfig = "//:tsconfig",
    source_map = True,
    lib_deps = [
        ":ts_dep",
        "//:node_modules/preact",
    ],
    deps = [":dep"],
)

ts_project(
    name = "ts_dep",
    srcs = ["ts_dep.mts"],
)

prerender_component(
    name = "dep",
    srcs = ["dep.tsx"],
    tsconfig = "//:tsconfig",
    source_map = True,
    lib_deps = ["//:node_modules/preact"],
    deps = [":transitive"],
)

prerender_component(
    name = "transitive",
    srcs = ["transitive.tsx"],
    tsconfig = "//:tsconfig",
    lib_deps = ["//:node_modules/preact"],
    source_map = True,
)

web_resources_devserver(
    name = "devserver",
    resources = ":site",
)

ts_project(
    name = "test_lib",
    srcs = ["test.mts"],
    testonly = True,
    deps = [
        "//common/testing:devserver",
        "//common/testing:webdriver",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_web_test_suite(
    name = "test",
    browsers = ["//tools/browsers:chromium-local"],
    data = [":devserver"],
    deps = [":test_lib"],
)
