load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load(
    "//packages/rules_prerender:index.bzl",
    "inject_resources",
    "prerender_page",
    "web_resources",
    "web_resources_devserver",
)
load("//tools:jasmine.bzl", "jasmine_node_test")

prerender_page(
    name = "page",
    src = "page.ts",
    lib_deps = ["//packages/rules_prerender"],
    scripts = [":script"],
    deps = ["//examples/custom_bundling/component"],
)

ts_library(
    name = "script",
    srcs = ["script.ts"],
)

rollup_bundle(
    name = "bundle",
    entry_point = ":page_scripts.ts",
    config_file = "rollup.config.js",
    link_workspace_root = True,
    silent = True,
    deps = [
        ":page_scripts",
        "@npm//@rollup/plugin-node-resolve",
    ],
)

inject_resources(
    name = "injected_page",
    input = "page.html",
    scripts = ["/index.js"],
)

web_resources(
    name = "site",
    entries = {
        "/index.html": "injected_page.html",
        "/index.js": "bundle.js",
    },
    deps = [":page_resources"],
)

web_resources_devserver(
    name = "devserver",
    resources = ":site",
)

ts_library(
    name = "test_lib",
    srcs = ["test.ts"],
    testonly = True,
    deps = [
        "//common:runfiles",
        "//common/testing:devserver",
        "//common/testing:puppeteer",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ],
)

jasmine_node_test(
    name = "test",
    data = [
        ":devserver",
        "@npm//puppeteer",
    ],
    deps = [":test_lib"],
)
