load("//tools:typescript.bzl", "ts_project")
load("//:index.bzl", "prerender_pages", "web_resources_devserver")
load("//tools/jasmine:defs.bzl", "jasmine_web_test_suite")

prerender_pages(
    name = "pages",
    src = "pages.ts",
    tsconfig = "//:tsconfig",
    source_map = True,
    data = glob(["content/*.txt"]),
    bundle_js = False, # Optimization: No client-side JavaScript on this page.
    lib_deps = [
        "//:node_modules/rules_prerender",
        "//:node_modules/@types/node",
    ],
)

web_resources_devserver(
    name = "devserver",
    resources = ":pages",
)

ts_project(
    name = "test_lib",
    srcs = ["test.ts"],
    testonly = True,
    deps = [
        "//common/testing:devserver",
        "//common/testing:webdriver",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_web_test_suite(
    name = "test",
    browsers = ["//tools/browsers:chromium-local"],
    data = [":devserver"],
    deps = [":test_lib"],
)
