load("//tools:typescript.bzl", "ts_project")
load(
    "//:index.bzl",
    "css_library",
    "prerender_component",
    "prerender_pages",
    "web_resources_devserver",
)
load("//tools:jasmine.bzl", "jasmine_web_test_suite")

prerender_pages(
    name = "site",
    src = "site.ts",
    tsconfig = "//:tsconfig",
    source_map = True,
    lib_deps = ["//:node_modules/rules_prerender"],
    deps = [":component"],
)

prerender_component(
    name = "component",
    srcs = ["component.ts"],
    tsconfig = "//:tsconfig",
    source_map = True,
    styles = [":styles"],
    lib_deps = ["//:node_modules/rules_prerender"],
    deps = ["//:prerender_components/@rules_prerender/declarative_shadow_dom"],
)

css_library(
    name = "styles",
    srcs = ["component.css"],
)

web_resources_devserver(
    name = "devserver",
    resources = ":site",
)

ts_project(
    name = "test_lib",
    srcs = ["test.ts"],
    data = [":devserver"],
    testonly = True,
    deps = [
        "//common/testing:devserver",
        "//common/testing:webdriver",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_web_test_suite(
    name = "test",
    browsers = ["//tools/browsers:chromium-local"],
    deps = [":test_lib"],
)
