load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load(
    "//:index.bzl",
    "css_library",
    "prerender_component",
    "prerender_pages",
    "web_resources_devserver",
)
load("//tools/jasmine:defs.bzl", "jasmine_web_test_suite")
load("//tools/typescript:defs.bzl", "ts_project")

copy_to_bin(
    name = "package",
    srcs = ["package.json"],
)

prerender_pages(
    name = "site",
    src = "site.tsx",
    tsconfig = "//:tsconfig",
    source_map = True,
    # Need `"type": "module"` to load `*.js` files output by `*.tsx` compilation.
    data = [":package"],
    lib_deps = [
        "//:node_modules/preact",
        "//:node_modules/@rules_prerender/preact",
    ],
    deps = [":component"],
)

prerender_component(
    name = "component",
    srcs = ["component.tsx"],
    tsconfig = "//:tsconfig",
    source_map = True,
    styles = [":styles"],
    lib_deps = [
        "//:node_modules/preact",
        "//:node_modules/@rules_prerender/preact",
    ],
    deps = ["//:prerender_components/@rules_prerender/declarative_shadow_dom"],
)

css_library(
    name = "styles",
    srcs = ["component.css"],
)

web_resources_devserver(
    name = "devserver",
    resources = ":site",
)

ts_project(
    name = "test_lib",
    srcs = ["test.mts"],
    data = [":devserver"],
    testonly = True,
    deps = [
        "//common/testing:devserver",
        "//common/testing:webdriver",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_web_test_suite(
    name = "test",
    browsers = ["//tools/browsers:chromium-local"],
    deps = [":test_lib"],
)
