load("//:index.bzl", "prerender_pages", "web_resources_devserver")
load("//tools/jasmine:defs.bzl", "jasmine_web_test_suite")
load("//tools/typescript:defs.bzl", "ts_project")

prerender_pages(
    name = "site",
    entry_point = "./site.js",
    prerender = ":prerender",
    scripts = ":scripts",
)

ts_project(
    name = "prerender",
    srcs = ["site.tsx"],
    deps = [
        "//:node_modules/@rules_prerender/preact",
        "//:node_modules/preact",
    ],
)

ts_project(
    name = "scripts",
    srcs = ["empty_script.mts"],
)

web_resources_devserver(
    name = "devserver",
    resources = ":site",
)

ts_project(
    name = "test_lib",
    srcs = ["test.mts"],
    testonly = True,
    deps = [
        "//common/testing:devserver",
        "//common/testing:webdriver",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_web_test_suite(
    name = "test",
    data = [":devserver"],
    deps = [":test_lib"],
)
