load("//:index.bzl", "extract_single_resource", "prerender_pages_unbundled")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")

prerender_pages_unbundled(
    name = "single_resource",
    src = "single_resource.ts",
    lib_deps = ["//packages/rules_prerender"],
)

extract_single_resource(
    resources = ":single_resource",
    out = "single_resource.txt",
)

diff_test(
    name = "single_resource_test",
    file1 = "single_resource.txt",
    file2 = "single_resource_expected.txt",
)

prerender_pages_unbundled(
    name = "nested_resource",
    src = "nested_resource.ts",
    lib_deps = ["//packages/rules_prerender"],
)

extract_single_resource(
    resources = ":nested_resource",
    out = "nested_resource.txt",
)

diff_test(
    name = "nested_resource_test",
    file1 = "nested_resource.txt",
    file2 = "nested_resource_expected.txt",
)
