load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("//:index.bzl", "extract_single_resource", prerender_pages_unbundled = "prerender_pages_unbundled2")
load("//tools/typescript:defs.bzl", "ts_project")

prerender_pages_unbundled(
    name = "single_resource",
    entry_point = "./single_resource.mjs",
    prerender = ":single_resource_prerender_lib",
)

ts_project(
    name = "single_resource_prerender_lib",
    srcs = ["single_resource.mts"],
    deps = ["//:node_modules/rules_prerender"],
)

extract_single_resource(
    resources = ":single_resource",
    out = "single_resource.txt",
)

diff_test(
    name = "single_resource_test",
    file1 = "single_resource.txt",
    file2 = "single_resource_expected.txt",
    size = "small",
)

prerender_pages_unbundled(
    name = "nested_resource",
    entry_point = "./nested_resource.mjs",
    prerender = ":nested_resource_prerender_lib",
)

ts_project(
    name = "nested_resource_prerender_lib",
    srcs = ["nested_resource.mts"],
    deps = ["//:node_modules/rules_prerender"],
)

extract_single_resource(
    resources = ":nested_resource",
    out = "nested_resource.txt",
)

diff_test(
    name = "nested_resource_test",
    file1 = "nested_resource.txt",
    file2 = "nested_resource_expected.txt",
    size = "small",
)
