load("@npm//@bazel/concatjs:index.bzl", "ts_library")
load("//:index.bzl", "css_library", "prerender_pages", "web_resources_devserver")
load("//tools:jasmine.bzl", "jasmine_web_test_suite")

prerender_pages(
    name = "page",
    src = "page.ts",
    inline_styles = [":styles"],
    bundle_js = False, # Optimization: No client-side JavaScript on this page.
    bundle_css = False, # Optimization: No global CSS styling on this page.
    lib_deps = ["//packages/rules_prerender"],
)

css_library(
    name = "styles",
    srcs = ["styles.css"],
    deps = [":dep"],
)

css_library(
    name = "dep",
    srcs = ["dep.css"],
)

web_resources_devserver(
    name = "devserver",
    resources = ":page",
)

ts_library(
    name = "test_lib",
    srcs = ["test.ts"],
    testonly = True,
    deps = [
        "//common/testing:devserver",
        "//common/testing:webdriver",
        "@npm//@bazel/runfiles",
        "@npm//@types/jasmine",
    ],
)

jasmine_web_test_suite(
    name = "test",
    browsers = ["//tools/browsers:chromium-local"],
    data = [":devserver"],
    deps = [":test_lib"],
)
