load("//tools:typescript.bzl", "ts_project")
load("//:index.bzl", "prerender_pages", "web_resources_devserver")
load("//tools:jasmine.bzl", "jasmine_web_test_suite")

prerender_pages(
    name = "page",
    src = "page.js",
    lib_deps = ["//packages/rules_prerender"],
    deps = ["//examples/javascript/component"],
)

web_resources_devserver(
    name = "devserver",
    resources = ":page",
)

ts_project(
    name = "test_lib",
    srcs = ["test.ts"],
    testonly = True,
    deps = [
        "//common/testing:devserver",
        "//common/testing:webdriver",
        "@npm//@types/jasmine",
    ],
)

jasmine_web_test_suite(
    name = "test",
    browsers = ["//tools/browsers:chromium-local"],
    data = [":devserver"],
    deps = [":test_lib"],
)
