load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("//tools/typescript:defs.bzl", "ts_project")
load("//:index.bzl", "prerender_pages", "web_resources_devserver")
load("//tools/jasmine:defs.bzl", "jasmine_web_test_suite")

copy_to_bin(
    name = "package",
    srcs = ["package.json"],
)

prerender_pages(
    name = "site",
    entry_point = "./site.js",
    prerender = ":prerender",
)

ts_project(
    name = "prerender",
    srcs = ["site.tsx"],
    # Need `"type": "module"` to load `*.js` files output by `*.tsx` compilation.
    data = [":package"],
    deps = [
        ":dep",
        "//:node_modules/@rules_prerender/preact",
        "//:node_modules/preact",
    ]
)

ts_project(
    name = "dep",
    srcs = ["dep.mts"],
    deps = [":transitive"],
)

ts_project(
    name = "transitive",
    srcs = ["transitive.mts"],
)

web_resources_devserver(
    name = "devserver",
    resources = ":site",
)

ts_project(
    name = "test_lib",
    srcs = ["test.mts"],
    testonly = True,
    deps = [
        "//common/testing:devserver",
        "//common/testing:webdriver",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_web_test_suite(
    name = "test",
    browsers = ["//tools/browsers:chromium-local"],
    data = [":devserver"],
    deps = [":test_lib"],
)
