load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@npm//@bazel/concatjs:index.bzl", "ts_library")
load(
    "//:index.bzl",
    "css_library",
    "prerender_pages",
    "web_resources",
    "web_resources_devserver",
)
load("//tools:jasmine.bzl", "jasmine_web_test_suite")

prerender_pages(
    name = "pages",
    src = "pages.ts",
    lib_deps = ["//packages/rules_prerender"],
    scripts = [":script"],
    inline_styles = [":styles"],
    resources = [":resources"],
)

css_library(
    name = "styles",
    srcs = ["styles.css"],
)

ts_library(
    name = "script",
    srcs = ["script.ts"],
)

web_resources(
    name = "resources",
    entries = {
        "/logo.png": "logo.png",
    },
)

web_resources_devserver(
    name = "devserver",
    resources = ":pages",
)

ts_library(
    name = "test_lib",
    srcs = ["test.ts"],
    testonly = True,
    deps = [
        "//common/testing:devserver",
        "//common/testing:webdriver",
        "@npm//@bazel/runfiles",
        "@npm//@types/jasmine",
    ],
)

jasmine_web_test_suite(
    name = "test",
    browsers = ["//tools/browsers:chromium-local"],
    data = [":devserver"],
    deps = [":test_lib"],
)

build_test(
    name = "build_test",
    targets = [
        ":pages_bundle",
        ":pages_styles",
    ],
)
