load("//tools:typescript.bzl", "ts_project")
load(
    "//:index.bzl",
    "css_library",
    "prerender_pages",
    "web_resources",
    "web_resources_devserver",
)
load("//tools:jasmine.bzl", "jasmine_web_test_suite")

prerender_pages(
    name = "pages",
    src = "pages.ts",
    tsconfig = "//:tsconfig.json",
    source_map = True,
    lib_deps = ["//packages/rules_prerender"],
    scripts = [":script"],
    styles = [":styles"],
    resources = [":resources"],
)

css_library(
    name = "styles",
    srcs = ["styles.css"],
)

ts_project(
    name = "script",
    srcs = ["script.ts"],
    tsconfig = "//:tsconfig_client",
)

web_resources(
    name = "resources",
    entries = {
        "/logo.png": "logo.png",
    },
)

web_resources_devserver(
    name = "devserver",
    resources = ":pages",
)

ts_project(
    name = "test_lib",
    srcs = ["test.ts"],
    testonly = True,
    deps = [
        "//common/testing:devserver",
        "//common/testing:webdriver",
        "@npm//@types/jasmine",
    ],
)

jasmine_web_test_suite(
    name = "test",
    browsers = ["//tools/browsers:chromium-local"],
    data = [":devserver"],
    deps = [":test_lib"],
)
