load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("//:index.bzl", prerender_pages = "prerender_pages2", "web_resources_devserver")
load("//tools/jasmine:defs.bzl", "jasmine_web_test_suite")
load("//tools/typescript:defs.bzl", "ts_project")

copy_to_bin(
    name = "package",
    srcs = ["package.json"],
)

prerender_pages(
    name = "site",
    entry_point = "./site.js",
    prerender = ":prerender",
)

ts_project(
    name = "prerender",
    srcs = ["site.tsx"],
    # Need `"type": "module"` to load `*.js` files output by `*.tsx` compilation.
    data = [":package"],
    deps = [
        "//examples/preact/component:component_prerender",
        "//:node_modules/@rules_prerender/preact",
        "//:node_modules/preact",
    ],
)

web_resources_devserver(
    name = "devserver",
    resources = ":site",
)

ts_project(
    name = "test_lib",
    srcs = ["test.mts"],
    data = [":devserver"],
    testonly = True,
    deps = [
        "//common/testing:devserver",
        "//common/testing:webdriver",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_web_test_suite(
    name = "test",
    browsers = ["//tools/browsers:chromium-local"],
    deps = [":test_lib"],
)
