load("//tools:typescript.bzl", "ts_project")
load("//:index.bzl", "prerender_resources")
load("//tools:jasmine.bzl", "jasmine_node_test")

ts_project(
    name = "generator",
    srcs = ["generator.ts"],
    deps = ["//packages/rules_prerender"],
)

prerender_resources(
    name = "prerender",
    entry_point = "./generator.js",
    data = [":generator"],
)

ts_project(
    name = "generator_test",
    srcs = ["generator_test.ts"],
    testonly = True,
    data = [":prerender"],
    deps = [
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [":generator_test"],
)
