load("//tools/typescript:defs.bzl", "ts_project")
load("//:index.bzl", "prerender_resources")
load("//tools/jasmine:defs.bzl", "jasmine_node_test")

ts_project(
    name = "generator",
    srcs = ["generator.mts"],
    deps = ["//:node_modules/rules_prerender"],
)

prerender_resources(
    name = "prerender",
    entry_point = "./generator.mjs",
    data = [":generator"],
)

ts_project(
    name = "generator_test",
    srcs = ["generator_test.mts"],
    testonly = True,
    data = [":prerender"],
    deps = [
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/node",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [":generator_test"],
)
