load("//:index.bzl", "prerender_resources")
load("//tools/jasmine:defs.bzl", "jasmine_node_test")
load("//tools/typescript:defs.bzl", "ts_project")

ts_project(
    name = "generator",
    srcs = ["generator.mts"],
    deps = ["//:node_modules/rules_prerender"],
)

prerender_resources(
    name = "prerender",
    data = [":generator"],
    entry_point = "./generator.mjs",
)

ts_project(
    name = "generator_test",
    testonly = True,
    srcs = ["generator_test.mts"],
    data = [":prerender"],
    deps = [
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/node",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [":generator_test"],
)
