load("//tools:typescript.bzl", "ts_project")
load(
    "//:index.bzl",
    "prerender_pages",
    "web_resources",
    "web_resources_devserver",
)
load("//tools:jasmine.bzl", "jasmine_web_test_suite")

prerender_pages(
    name = "page",
    src = "page.ts",
    tsconfig = "//:tsconfig.json",
    source_map = True,
    bundle_js = False, # Optimization: No client-side JavaScript on this page.
    resources = [":resources"],
    lib_deps = ["//packages/rules_prerender"],
    deps = [
        "//examples/resources/component",
        "//examples/resources/transitive",
    ],
)

web_resources(
    name = "resources",
    entries = {
        # Browser automatically checks this path for the page icon.
        "/favicon.ico": "logo.png",
    },
)

web_resources_devserver(
    name = "devserver",
    resources = ":page",
)

ts_project(
    name = "test_lib",
    srcs = ["test.ts"],
    testonly = True,
    deps = [
        "//common/testing:devserver",
        "//common/testing:webdriver",
        "@npm//@bazel/runfiles",
        "@npm//@types/jasmine",
    ],
)

jasmine_web_test_suite(
    name = "test",
    browsers = ["//tools/browsers:chromium-local"],
    data = [":devserver"],
    deps = [":test_lib"],
)
