load("//tools/typescript:defs.bzl", "ts_project")
load(
    "//:index.bzl",
    "prerender_pages",
    "web_resources",
    "web_resources_devserver",
)
load("//tools/jasmine:defs.bzl", "jasmine_web_test_suite")

prerender_pages(
    name = "page",
    src = "page.mts",
    tsconfig = "//:tsconfig",
    source_map = True,
    bundle_js = False, # Optimization: No client-side JavaScript on this page.
    resources = [":resources"],
    lib_deps = ["//:node_modules/rules_prerender"],
    deps = [
        "//examples/resources/component",
        "//examples/resources/transitive",
    ],
)

web_resources(
    name = "resources",
    entries = {
        # Browser automatically checks this path for the page icon.
        "/favicon.ico": "logo.png",
    },
)

web_resources_devserver(
    name = "devserver",
    resources = ":page",
)

ts_project(
    name = "test_lib",
    srcs = ["test.mts"],
    testonly = True,
    deps = [
        "//common/testing:devserver",
        "//common/testing:webdriver",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_web_test_suite(
    name = "test",
    browsers = ["//tools/browsers:chromium-local"],
    data = [":devserver"],
    deps = [":test_lib"],
)
