load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load(
    "//:index.bzl",
    "prerender_pages",
    "web_resources",
    "web_resources_devserver",
)
load("//tools/jasmine:defs.bzl", "jasmine_web_test_suite")
load("//tools/typescript:defs.bzl", "ts_project")

copy_to_bin(
    name = "package",
    srcs = ["package.json"],
)

prerender_pages(
    name = "site",
    entry_point = "./site.js",
    prerender = ":prerender",
    resources = ":resources",
)

ts_project(
    name = "prerender",
    srcs = ["site.tsx"],
    # Need `"type": "module"` to load `*.js` files output by `*.tsx` compilation.
    data = [":package"],
    deps = [
        "//:node_modules/@rules_prerender/preact",
        "//:node_modules/preact",
        "//examples/resources/component:component_prerender",
        "//examples/resources/transitive:transitive_prerender",
    ],
)

web_resources(
    name = "resources",
    entries = {
        # Browser automatically checks this path for the page icon.
        "/favicon.ico": "logo.png",
    },
)

web_resources_devserver(
    name = "devserver",
    resources = ":site",
)

ts_project(
    name = "test_lib",
    testonly = True,
    srcs = ["test.mts"],
    deps = [
        "//:node_modules/@types/jasmine",
        "//common/testing:devserver",
        "//common/testing:webdriver",
    ],
)

jasmine_web_test_suite(
    name = "test",
    data = [":devserver"],
    deps = [":test_lib"],
)
