load("//:index.bzl", "web_resources_devserver")
load("//packages/rules_prerender:prerender_pages2.bzl", "prerender_pages")
load("//tools/typescript:defs.bzl", "ts_project")

prerender_pages(
    name = "site",
    # TODO: Relative path.
    entry_point = "../../examples/rewrite/site.prerender.js",
    prerender = ":prerender",
)

web_resources_devserver(
    name = "devserver",
    resources = ":site",
)

ts_project(
    name = "prerender",
    srcs = ["site.prerender.tsx"],
    deps = [
        "//examples/rewrite/component:component_prerender",
        "//:node_modules/@rules_prerender/preact",
        "//:node_modules/preact",
    ],
)
