load("//:index.bzl", "prerender_pages", "web_resources_devserver")
load("//tools/typescript:defs.bzl", "ts_project")

prerender_pages(
    name = "site",
    entry_point = "./site.prerender.js",
    prerender = ":prerender",
)

web_resources_devserver(
    name = "devserver",
    resources = ":site",
)

ts_project(
    name = "prerender",
    srcs = ["site.prerender.tsx"],
    deps = [
        "//examples/rewrite/component:component_prerender",
        "//:node_modules/@rules_prerender/preact",
        "//:node_modules/preact",
    ],
)
