load("//:index.bzl", "prerender_pages", "web_resources_devserver")
load("//tools/typescript:defs.bzl", "ts_project")
load("//tools/jasmine:defs.bzl", "jasmine_web_test_suite")

prerender_pages(
    name = "site",
    src = "site.mts",
    scripts = [":foo", ":bar"],
    tsconfig = "//:tsconfig",
    source_map = True,
    lib_deps = ["//:node_modules/rules_prerender"],
)

ts_project(
    name = "foo",
    srcs = ["foo.mts"],
    tsconfig = "//:tsconfig_client",
)

ts_project(
    name = "bar",
    srcs = ["bar.mts"],
    tsconfig = "//:tsconfig_client",
)

web_resources_devserver(
    name = "devserver",
    resources = ":site",
)

ts_project(
    name = "test_lib",
    srcs = ["test.mts"],
    testonly = True,
    deps = [
        "//:node_modules/@types/jasmine",
        "//common/testing:devserver",
        "//common/testing:webdriver",
    ],
)

jasmine_web_test_suite(
    name = "test",
    browsers = ["//tools/browsers:chromium-local"],
    data = [":devserver"],
    deps = [":test_lib"],
)
