load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("//:index.bzl", "prerender_pages", "web_resources_devserver")
load("//tools/typescript:defs.bzl", "ts_project")
load("//tools/jasmine:defs.bzl", "jasmine_web_test_suite")

copy_to_bin(
    name = "package",
    srcs = ["package.json"],
)

prerender_pages(
    name = "site",
    src = "site.tsx",
    scripts = [":foo", ":bar"],
    tsconfig = "//:tsconfig",
    source_map = True,
    # Need `"type": "module"` to load `*.js` files output by `*.tsx` compilation.
    data = [":package"],
    lib_deps = [
        "//:node_modules/@rules_prerender/preact",
        "//:node_modules/preact",
    ],
)

ts_project(
    name = "foo",
    srcs = ["foo.mts"],
    tsconfig = "//:tsconfig_client",
)

ts_project(
    name = "bar",
    srcs = ["bar.mts"],
    tsconfig = "//:tsconfig_client",
)

web_resources_devserver(
    name = "devserver",
    resources = ":site",
)

ts_project(
    name = "test_lib",
    srcs = ["test.mts"],
    testonly = True,
    deps = [
        "//:node_modules/@types/jasmine",
        "//common/testing:devserver",
        "//common/testing:webdriver",
    ],
)

jasmine_web_test_suite(
    name = "test",
    browsers = ["//tools/browsers:chromium-local"],
    data = [":devserver"],
    deps = [":test_lib"],
)
